--- a/index.html
+++ b/index.html
@@ -11,16 +11,16 @@
 
 <body>
     <main>
-        <section class="currency-container">
-            <div class="currency-selection">
-                <label for="currency-from">Converter <b>de</b></label>
-                <select id="currency-from">
+        <section class="converter-container">
+            <div class="converter-form">
+                <label for="currency-select-from">Converter <b>de</b></label>
+                <select id="currency-select-from">
                     <optgroup label="Moeda">
-                        <option value="real">R$ Real</option>
+                        <option value="real" selected>R$ Real</option>
                         <option value="dolar">US$ Dólar</option>
                         <option value="euro">€ Euro</option>
                         <option value="libra">£ Libra</option>
-                        <option value="yene">¥ Yene</option>
+                        <option value="iene">¥ Yene</option>
                         <option value="won">₩ Won</option>
                     </optgroup>
                     <optgroup label="Cripto">
@@ -28,14 +28,14 @@
                     </optgroup>
                 </select>
 
-                <label for="currency-to">Converter <b>para</b></label>
-                <select id="currency-to">
+                <label for="currency-select-to">Converter <b>para</b></label>
+                <select id="currency-select-to">
                     <optgroup label="Moeda">
                         <option value="real">R$ Real</option>
-                        <option value="dolar">US$ Dólar</option>
+                        <option value="dolar" selected>US$ Dólar</option>
                         <option value="euro">€ Euro</option>
                         <option value="libra">£ Libra</option>
-                        <option value="yene">¥ Yene</option>
+                        <option value="iene">¥ Yene</option>
                         <option value="won">₩ Won</option>
                     </optgroup>
                     <optgroup label="Cripto">
@@ -43,28 +43,28 @@
                     </optgroup>
                 </select>
 
-                <label for="currency-value"><b>Valor</b></label>
-                <input type="text" placeholder="Digite o valor" id="currency-value" required>
+                <label for="amount-input"><b>Valor</b></label>
+                <input type="text" placeholder="Digite o valor" id="amount-input" required>
 
-                <button type="button" id="btn-convert">Converter</button>
-            </div><!-- currency-selection -->
+                <button type="button" id="convert-button">Converter</button>
+            </div><!-- converter-form -->
 
-            <div class="currency-result">
+            <div class="conversion-result">
                 <figure>
-                    <img src="img/brasil.png" alt="moeda real" class="flag">
-                    <figcaption>R$ Real</figcaption>
-                    <p>R$ 10.000,00</p>
+                    <img src="img/real.png" alt="moeda real" class="flag convert">
+                    <figcaption id="currency-name-from">R$ Real</figcaption>
+                    <p id="currency-value-from">R$ 10.000,00</p>
                 </figure>
 
-                <img src="img/seta.png" alt="seta" id="arrow">
+                <img src="img/seta.png" alt="seta" id="conversion-arrow">
 
                 <figure>
-                    <img src="img/estados-unidos.png" alt="moeda dólar" class="flag">
-                    <figcaption>US$ Dólar</figcaption>
-                    <p>US$ 2.000,00</p>
+                    <img src="img/dolar.png" alt="moeda dólar" class="flag converted">
+                    <figcaption id="currency-name-to">US$ Dólar</figcaption>
+                    <p id="currency-value-to">US$ 2.000,00</p>
                 </figure>
-            </div><!-- currency-result -->
-        </section><!-- currency-container -->
+            </div><!-- conversion-result -->
+        </section><!-- converter-container -->
     </main>
 </body>
 
